--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ coverage
 
 # Editor directories and files
 .vscode/*
+.vscode/
 !.vscode/extensions.json
 .idea
 *.suo
@@ -35,3 +36,4 @@ coverage
 # Vitest
 __screenshots__/
 .env
+node_modules/
