--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "format": "prettier --write --experimental-cli src/"
   },
   "dependencies": {
+    "axios": "^1.13.4",
     "lucide-vue-next": "^0.562.0",
     "vue": "^3.5.26"
   },
